--- a/BlazorPOC/_Imports.razor
+++ b/BlazorPOC/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using BlazorPOC
 @using BlazorPOC.Shared
+@using BlazorPOC.HelperClass
+@using BlazorPOC.Services
+@*@using BlazorPOC.Models*@
