--- a/BlazorPOC/Pages/Auth/Login.razor
+++ b/BlazorPOC/Pages/Auth/Login.razor
@@ -1,4 +1,4 @@
-﻿@page "/account/login"
+﻿@page "/"
 @inject NavigationManager NavigationManager
 @using System.Net.Http
 @using System.Net.Http.Json
