--- a/BlazorPOC/Shared/MainLayout.razor
+++ b/BlazorPOC/Shared/MainLayout.razor
@@ -7,9 +7,8 @@
 
     <div class="main">
         <div class="top-row px-4">
-            <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+            <NavLink href="account/Login" class="ml-md-auto">Login</NavLink>
         </div>
-
         <div class="content px-4">
             @Body
         </div>
